# snap-scale

./: .dockerignore  .gitignore  Dockerfile.backend  README.md  backend_requirements.txt  docker-compose.yml  frontend.py  pyproject.toml  requirements.txt  test.db
app/: app.py  db.py  users.py
backend/: Dockerfile.backend  main.py
backend/app/: images.py
