[project]
name = "snap-scale"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "fastapi-users-db-sqlalchemy>=7.0.0",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "imagekitio>=5.6.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.58.0",
    "uvicorn[standard]>=0.49.0",
]
